@@ -1,3 +1,8 @@
+2013-03-28  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-uclibc.sh: Additional sed edits for big-endian uClibc
+	configuration.
+
 2013-03-28  Simon Cook  <simon.cook@embecosm.com>
 
 	* build-all.sh: Replace --disable-multilib with --no-multilib and
